@@ -24,12 +24,12 @@ debug = false
 logtargets = /var/log/fail2ban.log
 
 # Option: syslog-target
-# Notes.: where to find syslog facility if logtarget SYSLOG
+# Notes.: where to find syslog facility if logtarget SYSLOG.
 # Values: file(socket) hostname hostname:port Default: /dev/log
 syslog-target = /dev/log
 
 # Option: syslog-facility
-# Notes.: which syslog facility to use if logtarget SYSLOG
+# Notes.: which syslog facility to use if logtarget SYSLOG.
 # Values: NUM Default: 1
 syslog-facility = 1
 
@@ -51,6 +51,12 @@ maxretry = 5
 #
 bantime = 600
 
+# Option:  findtime
+# Notes.:  lifetime in seconds of a "failed" log entry.
+# Values:  NUM  Default:  600
+#
+findtime = 600
+
 # Option:  ignoreip
 # Notes.:  space separated list of IP's to be ignored by fail2ban.
 #          You can use CIDR mask in order to specify a range.
@@ -69,7 +75,7 @@ ignoreip = 192.168.0.0/16
 cmdstart = 
 
 # Option:  cmdend
-# Notes.:  command executed once at the end of Fail2Ban
+# Notes.:  command executed once at the end of Fail2Ban.
 # Values:  CMD  Default:
 #
 cmdend = 
